--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ppdb-react",
-  "version": "0.1.0",
+  "version": "1.1",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -11,12 +11,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
