--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ppdb-react",
-  "version": "1.1",
+  "version": "1.2",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -22,6 +22,8 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.5",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
