--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,4 @@
 {
-    "API_HOST": "https://api-ppdb.smkn1maja.sch.id"
+    "API_HOST_PRODUCTION": "https://api-ppdb.smkn1maja.sch.id",
+    "API_HOST_DEVELOPMENT": "http://localhost:8000"
 }
